--- a/angular.json
+++ b/angular.json
@@ -136,6 +136,41 @@
           }
         }
       }
+    },
+    "my-counter": {
+      "root": "projects/my-counter",
+      "sourceRoot": "projects/my-counter/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/my-counter/tsconfig.lib.json",
+            "project": "projects/my-counter/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/my-counter/src/test.ts",
+            "tsConfig": "projects/my-counter/tsconfig.spec.json",
+            "karmaConfig": "projects/my-counter/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/my-counter/tsconfig.lib.json",
+              "projects/my-counter/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "ngRxElementDemo"
