--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng build my-counter && ng serve",
+    "start": "ng build my-counter && ng serve --project=elementApp -o --port=4201",
     "build": "ng build",
+    "build-element": "ng build --prod --output-hashing=none",
+    "package-linux": "cat dist/ngRxElementDemo/{runtime,polyfills,scripts,main}.js | gzip > htmlapp/counter-element.js",
+    "package": "jscat ./dist/ngRxElementDemo/runtime.js ./dist/ngRxElementDemo/polyfills.js ./dist/ngRxElementDemo/scripts.js ./dist/ngRxElementDemo/main.js > htmlapp/counter-element.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -40,9 +43,12 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "cat": "^0.2.0",
     "codelyzer": "~4.5.0",
+    "gzip-cli": "^0.1.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jscat": "0.0.2",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
