--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "projects/counterelement/src/styles.css"
             ],
             "scripts": [
               {
@@ -192,7 +192,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "projects/counterelement/src/styles.css"
             ],
             "scripts": [
               {
